Updated meta for SEO

--- a/index.html
+++ b/index.html
@@ -3,11 +3,54 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- SEO Meta Tags -->
+  <meta name="description"
+    content="Explore the latest movies, movie reviews, trailers, and ratings on Cinegrid. Discover new films and plan your next movie night!" />
+  <meta name="keywords"
+    content="movies, movie reviews, movie trailers, film ratings, Cinegrid, explore movies, new movies, movie recommendations" />
+  <meta name="author" content="Cinegrid Team" />
+  <meta property="og:title" content="Cinegrid | Explore Movies" />
+  <meta property="og:description"
+    content="Explore the latest movies, movie reviews, trailers, and ratings on Cinegrid. Discover new films and plan your next movie night!" />
+  <!-- <meta property="og:image" content="/path/to/your/social-image.jpg" /> -->
+  <meta property="og:url" content="https://www.cinegrid.com" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Cinegrid | Explore Movies" />
+  <meta name="twitter:description"
+    content="Explore the latest movies, movie reviews, trailers, and ratings on Cinegrid. Discover new films and plan your next movie night!" />
+  <!-- <meta name="twitter:image" content="/path/to/your/social-image.jpg" /> -->
+
+  <!-- Link to Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+  <!-- Stylesheet -->
   <link href="/src/styles.css" rel="stylesheet">
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Title -->
   <title>Cinegrid | Explore Movies</title>
+
+  <!-- Structured Data for Search Engines -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Movie",
+      "name": "Cinegrid",
+      "url": "https://www.cinegrid.com",
+      "description": "Explore the latest movies, movie reviews, trailers, and ratings on Cinegrid.",
+      "logo": "/path/to/your/logo.jpg",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Cinegrid",
+        "logo": "/path/to/your/logo.jpg",
+        "url": "https://www.cinegrid.com"
+      }
+    }
+  </script>
 </head>
 
 <body>
