--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:description"
     content="Explore the latest movies, movie reviews, trailers, and ratings on Cinegrid. Discover new films and plan your next movie night!" />
   <!-- <meta property="og:image" content="/path/to/your/social-image.jpg" /> -->
-  <meta property="og:url" content="https://www.cinegrid.com" />
+  <meta property="og:url" content="https://cinegrid.onrender.com/" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Cinegrid | Explore Movies" />
   <meta name="twitter:description"
@@ -40,14 +40,14 @@
       "@context": "https://schema.org",
       "@type": "Movie",
       "name": "Cinegrid",
-      "url": "https://www.cinegrid.com",
+      "url": "https://cinegrid.onrender.com/",
       "description": "Explore the latest movies, movie reviews, trailers, and ratings on Cinegrid.",
       "logo": "/path/to/your/logo.jpg",
       "publisher": {
         "@type": "Organization",
         "name": "Cinegrid",
         "logo": "/path/to/your/logo.jpg",
-        "url": "https://www.cinegrid.com"
+        "url": "https://cinegrid.onrender.com/"
       }
     }
   </script>
